<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".ui.comments.CommentsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/lightRed"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:text="@string/str_comments"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="@dimen/_16ssp" />


        </androidx.appcompat.widget.Toolbar>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone"
            android:padding="@dimen/_8sdp"
            android:text="@string/view_previous_comments"
            android:textColor="#215c43"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/ly_message"
            app:layout_constraintTop_toBottomOf="@id/tv_previous" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/no_comments_found"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/ly_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/ly_counter"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/add_a_comment"
                android:maxLength="280"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />

            <LinearLayout
                android:id="@+id/ly_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toStartOf="@id/ic_send"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_max_count"
                    android:textColor="@color/dark_gray" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_send"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_send" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>